--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         ],
         "jsx": "react-jsx",
         "allowJs": true,
+        "skipLibCheck": true,
         "noEmit": true
     }
 }
